@@ -25,7 +25,8 @@ buildscript {
 }
 
 plugins {
-    id "net.neoforged.neoforgegradle.moddev"
+    id "net.neoforged.moddev"
+    id "net.neoforged.moddev.junit"
     id "maven-publish"
     id "com.diffplug.spotless"
     id "com.github.johnrengelman.shadow"
@@ -57,6 +58,15 @@ configurations {
 
 repositories {
     mavenLocal()
+    maven {
+        name 'Maven for PR #54' // https://github.com/neoforged/FancyModLoader/pull/54
+        url 'https://prmaven.neoforged.net/FancyModLoader/pr54'
+        content {
+            includeModule('net.neoforged.fancymodloader', 'earlydisplay')
+            includeModule('net.neoforged.fancymodloader', 'junit-fml')
+            includeModule('net.neoforged.fancymodloader', 'loader')
+        }
+    }
     maven {
         url "https://maven.shedaniel.me/"
         content {
@@ -107,6 +117,14 @@ repositories {
     mavenCentral()
 }
 
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        if (details.requested.group == 'net.neoforged.fancymodloader') {
+            details.useVersion "3.0.53-pr-54-junit"
+        }
+    }
+}
+
 dependencies {
     // To be copied into the jar file
     shaded project(path: ':libs:markdown', configuration: "archives")
@@ -133,6 +151,8 @@ dependencies {
 
     // compile against provided APIs
     compileOnly "dev.emi:emi-neoforge:${emi_version}:api"
+
+    testRuntimeOnly "net.neoforged.fancymodloader:junit-fml:3.0.53-pr-54-junit"
 
     // Always depend on the REI API to compile
     if (project.runtime_itemlist_mod == "emi") {
@@ -168,7 +188,6 @@ dependencies {
 
     // unit test dependencies
     testImplementation(platform("org.junit:junit-bom:${project.junit_version}"))
-    testRuntimeOnly(project(":libs:junit"))
     testImplementation("org.junit.jupiter:junit-jupiter-api")
     testImplementation("org.junit.jupiter:junit-jupiter-params")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
@@ -237,88 +256,6 @@ test {
 
     // Might not need this anymore...
     systemProperty "guideDev.ae2guide.sources", file("guidebook").absolutePath
-
-    def aeDir = project.rootDir.absolutePath
-    environment(
-            "MOD_CLASSES",
-            // In Gradle 9, replace with a provider
-            List.of(
-                    "${project.buildDir}/classes/java/main",
-                    "${project.buildDir}/classes/java/test",
-                    "${project.buildDir}/resources/main",
-                    "${project.buildDir}/resources/test",
-            ).stream().map {
-                "ae2%%" + it
-            }.collect(java.util.stream.Collectors.joining(File.pathSeparator))
-    )
-
-    def fmlVersion = "3.0.18"
-
-    environment("fmljunit.assetsDir", new File(gradle.gradleUserHomeDir, "caches/minecraft/assets/${minecraft_version}/").absolutePath)
-    environment("fmljunit.neoForgeVersion", neoforge_version)
-    environment("fmljunit.fmlVersion", fmlVersion)
-    environment("fmljunit.mcVersion", minecraft_version)
-    //environment("fmljunit.neoFormVersion", neoFormRuntime.findIn(configurations.runtimeClasspath).first().specification.neoFormVersion)
-
-//    jvmArgumentProviders.add(new CommandLineArgumentProvider() {
-//        @Override
-//        Iterable<String> asArguments() {
-//
-//            // This includes the system properties
-//            var runArgs = runs.getByName("client").realiseJvmArguments()
-//            for (var i = 0; i < runArgs.size(); i++) {
-//                var arg = runArgs.get(i);
-//                if (arg.startsWith("-DlegacyClassPath.file=")) {
-//                    runArgs.set(i, "-DlegacyClassPath.file=${project.rootDir.absolutePath}/build/test_classpath.txt")
-//                } else if ((arg == "-p" || arg == "--module-path") && i + 1 < runArgs.size()) {
-//                    runArgs.set(i + 1, test.classpath
-//                            .filter {
-//                                it.name.contains("bootstraplauncher")
-//                                        || it.name.contains("securejarhandler")
-//                                        || it.name.contains("asm")
-//                                        || it.name.contains("JarJarFileSystems")
-//                                        || it.name.startsWith("mockito")
-//                                        || it.name.startsWith("junit-jupiter")
-//                                        || it.name.startsWith("junit-platform")
-//                                        || it.name.startsWith("opentest4j")
-//                                        || it.name.startsWith("assertj-")
-//                                        || it.name.startsWith("guava-testlib-")
-//                            }
-//                            .join(File.pathSeparator))
-//                }
-//            }
-//            println(runArgs)
-//
-//            return runArgs
-//        }
-//    })
-//
-//    afterEvaluate {
-//        dependsOn tasks.named("writeMinecraftClasspathClient")
-//    }
-//
-//    doFirst {
-//        var classPathLines = tasks.getByName("writeMinecraftClasspathClient").output.asFile.get().readLines()
-//        classPathLines.addAll(test.classpath
-//                .filter { it.name.startsWith("fmljunit") })
-//        new File("$aeDir/build/test_classpath.txt").text = classPathLines.join("\n")
-//    }
-
-//    [
-//            "-DignoreList=junit,securejarhandler,asm,asm-commons,asm-tree,asm-util,asm-analysis,bootstraplauncher,JarJarFileSystems,events-${fmlVersion}.jar,core-${fmlVersion}.jar,language-java,language-lowcode,language-minecraft,client-extra,neoforge-,mixinextras-",
-//            "--add-modules",
-//            "ALL-MODULE-PATH",
-//            "--add-opens", "java.base/java.util.jar=cpw.mods.securejarhandler",
-//            "--add-opens", "java.base/java.lang.invoke=cpw.mods.securejarhandler",
-//            "--add-exports", "java.base/sun.security.util=cpw.mods.securejarhandler",
-//            "--add-exports", "jdk.naming.dns/com.sun.jndi.dns=java.naming",
-//            "-DlegacyClassPath.file=$aeDir/build/test_classpath.txt",
-//            "-Dfml.gameLayerLibraries=events-${fmlVersion}.jar",
-//            "-DignoreList=securejarhandler-2.1.24.jar,asm-9.5.jar,asm-commons-9.5.jar,asm-tree-9.5.jar,asm-util-9.5.jar,asm-analysis-9.5.jar,bootstraplauncher-1.1.2.jar,JarJarFileSystems-0.4.0.jar,events-2.0.1.jar,core-2.0.1.jar,language-java-2.0.1.jar,language-lowcode-2.0.1.jar,language-minecraft-2.0.1.jar,mixinextras-neoforge-0.3.2.jar,client-extra,neoforge-",
-//            "-DmergeModules=jna-5.10.0.jar,jna-platform-5.10.0.jar",
-//            "-Djava.net.preferIPv6Addresses=system",
-//            "-Dfml.pluginLayerLibraries=core-${fmlVersion}.jar,language-java-${fmlVersion}.jar,language-lowcode-${fmlVersion}.jar,language-minecraft-${fmlVersion}.jar",
-//    ]
 }
 
 dependencies {
